--- a/recitewords/templates/base.html
+++ b/recitewords/templates/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
     <meta charset="utf-8" />
@@ -293,6 +294,9 @@
                             <li>
                                 <a href="{% url 'exam' %}">测试</a>
                             </li>
+                            <li>
+                                <a href="{% url 'favor_word' %}">我的收藏</a>
+                            </li>
                             <li class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" id="dropmenu" data-toggle="dropdown">
                                     {% if request.user.is_authenticated %} {% load staticfiles %} 关于我的 {% else %} 登录/注册 {% endif %}
@@ -408,4 +412,5 @@
     </script>
     <script type="text/javascript" src="/static/assets/js/core.js"></script>
 </body>
+
 </html>
