--- a/recitewords/templates/home.html
+++ b/recitewords/templates/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     {% load staticfiles %}
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
@@ -216,8 +217,8 @@
                                 <p>用户名</p>
                                 <input id="profilesetform-username-input" name="username" type="text" class="form-control" placeholder="用户名" value="{{ request.user.username }}">
                                 <div id="profilesetform-username-feedback" class="invalid-feedback d-block">
-                                        &nbsp;
-                                    </div>
+                                    &nbsp;
+                                </div>
                             </div>
                         </div>
                         <div class="row form-row">
@@ -225,8 +226,8 @@
                                 <p>新密码</p>
                                 <input name="password1" id="profilesetform-password1-input" type="password" class="form-control" placeholder="新密码">
                                 <div id="profilesetform-password1-feedback" class="invalid-feedback d-block">
-                                        &nbsp;
-                                    </div>
+                                    &nbsp;
+                                </div>
                             </div>
                         </div>
                         <div class="row form-row">
@@ -234,8 +235,8 @@
                                 <p>确认新密码</p>
                                 <input name="password2" id="profilesetform-password2-input" type="password" class="form-control" placeholder="再次输入新密码">
                                 <div id="profilesetform-password2-feedback" class="invalid-feedback d-block">
-                                        &nbsp;
-                                    </div>
+                                    &nbsp;
+                                </div>
                             </div>
                         </div>
                         <div class="row form-row">
@@ -243,8 +244,8 @@
                                 <p>电子邮件</p>
                                 <input name="email" id="profilesetform-email-input" type="email" class="form-control" placeholder="电子邮箱" value="{{ request.user.email }}">
                                 <div id="profilesetform-email-feedback" class="invalid-feedback d-block">
-                                        &nbsp;
-                                    </div>
+                                    &nbsp;
+                                </div>
                             </div>
                         </div>
                     </form>
@@ -288,36 +289,39 @@
                                 <li>
                                     <a href="{% url 'wordbook_list' %}">单词书</a>
                                 </li>
-                                <li class="nav-item dropdown">
-                                        <a href="#" class="nav-link dropdown-toggle" id="dropmenu" data-toggle="dropdown">
-                                            {% if request.user.is_authenticated %} {% load staticfiles %} 关于我的 {% else %} 登录/注册 {% endif %}
-                                        </a>
-                                        <ul class="dropdown-menu" style="min-width:auto;">
-                                            {% if request.user.is_authenticated %}
-                                            <li>
-                                                <a class="dropdown-item" data-toggle="modal" id="modal-profile-set" href="#modal-container-profile-set" role="button" style="text-align:right">个人资料</a>
-                                            </li>
-                                            <li>
-                                                <a class="dropdown-item" data-toggle="modal" id="modal-learn-set" href="#modal-container-learn-set" role="button" style="text-align:right">学习设置</a>
-                                            </li>
-                                            <li>
-                                                <div class="dropdown-divider"></div>
-                                            </li>
-                                            <li>
-                                                <a class="dropdown-item" data-toggle="modal" id="modal-logout" href="#modal-container-logout" role="button" style="text-align:right">退出</a>
-                                            </li>
-                                            {% else %}
-                                            <li>
-                                                <a class="dropdown-item" data-toggle="modal" id="modal-signup" href="#modal-container-login" role="button" style="text-align:right">登录</a>
-                                            </li>
-                                            <li>
-                                                <a class="dropdown-item" data-toggle="modal" id="modal-signup" href="#modal-container-signup" role="button" style="text-align:right">注册</a>   
-                                            </li>
-                                            {% endif %}
-                                        </ul>
-                                    </li>
                                 <li>
                                     <a href="{% url 'exam' %}">测试</a>
+                                </li>
+                                <li>
+                                    <a href="{% url 'favor_word' %}">我的收藏</a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a href="#" class="nav-link dropdown-toggle" id="dropmenu" data-toggle="dropdown">
+                                        {% if request.user.is_authenticated %} {% load staticfiles %} 关于我的 {% else %} 登录/注册 {% endif %}
+                                    </a>
+                                    <ul class="dropdown-menu" style="min-width:auto;">
+                                        {% if request.user.is_authenticated %}
+                                        <li>
+                                            <a class="dropdown-item" data-toggle="modal" id="modal-profile-set" href="#modal-container-profile-set" role="button" style="text-align:right">个人资料</a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item" data-toggle="modal" id="modal-learn-set" href="#modal-container-learn-set" role="button" style="text-align:right">学习设置</a>
+                                        </li>
+                                        <li>
+                                            <div class="dropdown-divider"></div>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item" data-toggle="modal" id="modal-logout" href="#modal-container-logout" role="button" style="text-align:right">退出</a>
+                                        </li>
+                                        {% else %}
+                                        <li>
+                                            <a class="dropdown-item" data-toggle="modal" id="modal-signup" href="#modal-container-login" role="button" style="text-align:right">登录</a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item" data-toggle="modal" id="modal-signup" href="#modal-container-signup" role="button" style="text-align:right">注册</a>
+                                        </li>
+                                        {% endif %}
+                                    </ul>
                                 </li>
                             </ul>
                         </div>
@@ -355,6 +359,9 @@
                                 </li>
                                 <li>
                                     <a href="{% url 'exam' %}">测试</a>
+                                </li>
+                                <li>
+                                    <a href="{% url 'favor_word' %}">我的收藏</a>
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a href="#" class="nav-link dropdown-toggle" id="dropmenu" data-toggle="dropdown">
@@ -528,4 +535,5 @@
     <script src="/static/assets/plugins/jquery-numberAnimate/jquery.animateNumbers.js" type="text/javascript"></script>
     <script type="text/javascript" src="/static/assets/js/core.js"></script>
 </body>
+
 </html>
