--- a/recitewords/templates/wordbook_list.html
+++ b/recitewords/templates/wordbook_list.html
@@ -8,19 +8,6 @@
                         <h2>
                             单词书</h2>
                     </div>
-                    <!--<div class="col-md-6 p-t-20 xs-no-padding xs-p-l-20">
-                                <div class="portfolio-filter">
-                                    <ul id="portfolio-nav">
-                                        <li class="current"><a href="#" data-filter="*">All</a></li>
-                                        <li><a data-filter=".web" href="#">Web design</a></li>
-                                        <li><a data-filter=".logo-design" href="#">Logo</a></li>
-                                        <li><a data-filter=".branding" href="#">Branding</a></li>
-                                        <li><a data-filter=".video" href="#">Video</a></li>
-                                        <li><a data-filter=".photo" href="#">Photography</a></li>
-                                    </ul>
-                                    
-                                </div>
-                            </div>-->
                 </div>
             </div>
             <div class="clearfix">
@@ -45,10 +32,24 @@
                         </div>
                         <div class="item-info">
                             <h4 class="text-dark no-margin p-t-10 title semi-bold">
-                                {{ wordbook.name }}</h4>
+                                {{ wordbook.name }} 已学习 - {{ wordbook.total_learned }} 已掌握 - {{ wordbook.total_mastered }}</h4>
                             <p></p>
 
                         </div>
+                        <div class="clearfix">
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <span class="percent" style="left: 0%;">{{ wordbook.learned_percent }}%</span>
+                                <div class="progress transparent no-radius no-margin">
+                                    <div class="progress-bar progress-bar-black animated-progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0"
+                                        aria-valuemax="100" style="width: {{ wordbook.learned_percent }}%;">
+                                    </div>
+                                </div>
+                                <!-- /.progress -->
+                            </div>
+                        </div>
+                        <br>
 
                         <!--END ITEM-INFO-->
                         <div class="clearfix">
@@ -56,8 +57,10 @@
                         <form method="POST" action="{% url 'wordbook_detail' %}">
                             {% csrf_token %}
                             <input type="text" hidden="hidden" name="wordbook-id" value="{{ wordbook.id }}">
-                            <input type="submit" class="btn btn-primary btn-cons" value="选择该书">
+                            <input type="submit" class="btn btn-primary btn-cons" style="background-color: #505458" value="选择该书">
                         </form>
+                        <div class="clearfix">
+                        </div>
                     </li>
                     {% endfor %}
                 </ul>
