--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -623,6 +623,10 @@ hr {
 	margin:20px;
 }
 /** Padding top **/
+.m-t-1{
+	margin-top:1px;
+}
+
 .m-t-10{
 	margin-top:10px;
 }
@@ -783,6 +787,23 @@ line-height: 21px;
 	min-width: 120px;
 	margin-bottom: 8px;
 }
+
+.btn-cons-exam{	
+	min-width: 100%;
+	margin-bottom: 8px;
+	background-color: rgba(255,255,255) !important;
+	color: #505458 !important;
+	border: 0.5px solid;
+	border-color: #1f3853;
+}
+
+.btn-cons-exam:hover{	
+	background-color: #1f3853 !important;
+	color: #fff !important;
+	border: 0.5px solid;
+	border-color: #1f3853;
+}
+
 /* only for demonstration */
 .btn-demo-space{
   margin-bottom: 8px;
