--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -791,7 +791,7 @@ line-height: 21px;
 .btn-cons-exam{	
 	min-width: 100%;
 	margin-bottom: 8px;
-	background-color: rgba(255,255,255) !important;
+	background-color: white!important;
 	color: #505458 !important;
 	border: 0.5px solid;
 	border-color: #1f3853;
@@ -799,7 +799,7 @@ line-height: 21px;
 
 .btn-cons-exam:hover{	
 	background-color: #1f3853 !important;
-	color: #fff !important;
+	color: white!important;
 	border: 0.5px solid;
 	border-color: #1f3853;
 }
